✨ feat: trocando as sprites do projeto

--- a/MGE_MillerGameEngine/MillerSpaceInvaders/MillerSpaceInvaders.csproj
+++ b/MGE_MillerGameEngine/MillerSpaceInvaders/MillerSpaceInvaders.csproj
@@ -91,6 +91,14 @@
   <ItemGroup>
     <None Include="Resources\spaceinvadersIcone.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\player.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\inimigo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\projetil.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
